# genny

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  release.sh  start_auto_build.sh  start_dev_server.sh
docs/: index.html  index.js
docs/pkg/: README.md  genny.d.ts  genny.js  genny_bg.js  genny_bg.wasm  genny_bg.wasm.d.ts  package.json
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
